# Location_UpSoftware

./: CMakeLists.txt  README.md  main.cpp
Embedded programs/: build.bat  keilkilll.bat
Embedded programs/BoardDrivers/inc/: adc.h  at24c02.h  cmd.h  cs5340.h  dac.h  delay.h  dma.h  exti.h  gain.h  iis.h  iwdg.h  signal_process.h  spi.h  tim.h  uart.h
Embedded programs/BoardDrivers/src/: adc.c  at24c02.c  cmd.c  cs5340.c  dac.c  delay.c  dma.c  exti.c  gain.c  iis.c  iwdg.c  signal_process.c  spi.c  tim.c  uart.c
Embedded programs/Libraries/CMSIS/: startup_stm32f40xx.s  stm32f4xx.h
Embedded programs/Listing/: startup_stm32f40xx.lst  xs_rec_app_net.map
Embedded programs/NetWork/: net_conf.c  net_conf.h
Embedded programs/NetWork/httpServer/: httpParser.h  httpServer.c  httpServer.h  webpage.h
Embedded programs/NetWork/w5500/: socket.c  socket.h  w5500.c  w5500.h  wizchip_conf.c  wizchip_conf.h
Embedded programs/Project/RVMDK(uv5)/: xs_rec_net.uvguix.28483  xs_rec_net.uvguix.28483.bak  xs_rec_net.uvoptx  xs_rec_net.uvprojx
Embedded programs/User/: main.c  main.h  stm32f4xx_it.c  stm32f4xx_it.h  system_stm32f4xx.c
Embedded programs/Utilities/: stm324x7i_eval.c  stm324x7i_eval.h  stm324x9i_eval.c  stm324x9i_eval.h
algorithm/: CMakeLists.txt  algorithm.cpp  algorithm.h  signalProcess.cpp  signalProcess.h
app/: thresholdDialog.cpp  thresholdDialog.h  widget.cpp  widget.h  widget.ui
matlab_code/: main_tdoa.m
matlab_code/function/: LS.m
matlab_code/function/coordinate transformation/: BLH2ENU.m  ECEF2ENU.m  ECEF2WGS84.m  ENU2ECEF.m  ENU2WGS84.m  WGS842ECEF.m  readme.txt
matlab_code/function/protocol analysis/: calculateCRC16Modbus.m  protocol_test.m  readAndParseResponse.m  reportError.m  reportStatus.m  sendCommand.m
matlab_code/function/signal process/: Detect_Signal.m  add_environment_noise.m  bandpass_filter.m  calculate_delay.m  calculation_distance.m  curve_fit.m  cxcoor.m  first_order_autocorrelation.m  plot_TF.m  target_signal_detect.m  target_signal_detect_all_ch.m
network/: CMakeLists.txt  TcpClient.cpp  TcpClient.h  manager.cpp  manager.h  nodecontroller.cpp  nodecontroller.h  nodes_info.json
protocal/: protocal.cpp  protocal.h
protocol/: CMakeLists.txt  protocol.cpp  protocol.h
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test.cpp  test.h
utils/: CMakeLists.txt  CoordConverter.cpp  CoordConverter.h
